git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@1791 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/en/Training_Materials.html
+++ b/CurrentRelease/en/Training_Materials.html
@@ -71,7 +71,7 @@
     <div id="pagebody">
         <div id="mainbody">
 <P>The BCH Modules comprise a set of cohesive training subunits. The training subunits are self-contained, which means that different components can be put together in various formats suitable for different target audiences.</P>
-<P>Click <A href="http://www.unep.ch/biosafety/BCH/BCHHelpSystem/CD%20ISOs%20Training%20Materials/en.zip" target=_blank>here</A> to download the CD-ROM image&nbsp;with the BCH training kit.</P>
+<P>Click <A href="http://bch.cbd.int/help/topics/en.zip" target=_blank>here</A> to download the CD-ROM image&nbsp;with the BCH training kit.</P>
 <P><STRONG>Note: </STRONG></P>
 <UL>
 <LI><EM>You will need to uncompress the file and to&nbsp;write the ISO&nbsp;image to a CD-ROM. For instructions on how to do this, consult the manual provided with your CD-ROM writing software.</EM> 
@@ -81,7 +81,27 @@
         </div>
         
         <div id="pagefooter">
-            <p>&nbsp;</p><p>&nbsp;</p><hr style="height: 1px" /><p><P class=MsoNormal><b>Reproduction</b></P><br><P class=MsoNormal>The content of this publication may be reproduced in whole or in part and in any form for educational or non-profit purposes without special permission from the copyright holder, provided acknowledgment of the source is made. UNEP would appreciate receiving a copy of any publication that uses this publication as a source. No use of this publication may be made for resale or any other commercial purpose whatsoever without prior permission in writing from UNEP. The use of information from this website concerning proprietary products for publicity or advertising is not permitted.</p><br><br><P class=MsoNormal><b>Disclaimers</b></P><br><P class=MsoNormal>The content and views expressed on this website do not necessarily reflect the views or policies of the contributory organizations or the United Nations Environment Programme (UNEP) and neither do they imply any endorsement. The designations employed and the presentation of material on this website do not imply the expression of any opinion whatsoever on the part of UNEP concerning the legal status of any country, territory or city or its authorities, or concerning the delimitation of its frontiers and boundaries. Mention of a commercial company or product in this publication does not imply the endorsement of UNEP.</p></p>
+            <p>&nbsp;</p><p>&nbsp;</p><hr style="height: 1px" /><p><P class=MsoNormal><b>Reproduction</b></P><br>
+<P class=MsoNormal>The content of this publication may be 
+reproduced in whole or in part and in any form for educational or non-profit 
+purposes without special permission from the copyright holder, provided 
+acknowledgment of the source is made. UNEP would appreciate receiving a copy of 
+any publication that uses this publication as a source. No use of this 
+publication may be made for resale or any other commercial purpose whatsoever 
+without prior permission in writing from UNEP. The use of information from this 
+website concerning proprietary products for publicity or advertising is not 
+permitted.</p><br><br>
+
+<P class=MsoNormal><b>Disclaimers</b></P><br>
+<P class=MsoNormal>The content and views expressed on this website 
+do not necessarily reflect the views or policies of the contributory 
+organizations or the United Nations Environment Programme (UNEP) and neither do 
+they imply any endorsement. The designations employed and the presentation of 
+material on this website do not imply the expression of any opinion whatsoever 
+on the part of UNEP concerning the legal status of any country, territory or 
+city or its authorities, or concerning the delimitation of its frontiers and 
+boundaries. Mention of a commercial company or product in this publication does 
+not imply the endorsement of UNEP.</p></p>
         </div>
         
     </div>
