--- a/CurrentRelease/es/Training_Materials.html
+++ b/CurrentRelease/es/Training_Materials.html
@@ -71,7 +71,7 @@
     <div id="pagebody">
         <div id="mainbody">
 <P>Los modulos del CIISB comprenden un conjunto cohesivo de&nbsp;sub-unidades de entrenamiento.&nbsp;Las sub-unidades de entrenamiento son auto-contenidas, lo que&nbsp;significa que diferentes componentes pueden juntarse en varios formatos adecuados para diferentes&nbsp;audiencias.&nbsp;</P>
-<P>Haga clic <A href="http://www.unep.ch/biosafety/BCH/BCHHelpSystem/CD%20ISOs%20Training%20Materials/es.zip" target=_blank>aquí</A> para descargar la imagen de CD-ROM con el kit de entrenamiento del CIISB.<BR><BR><STRONG>Nota:</STRONG> </P>
+<P>Haga clic <A href="http://bch.cbd.int/help/topics/es.zip" target=_blank>aquí</A> para descargar la imagen de CD-ROM con el kit de entrenamiento del CIISB.<BR><BR><STRONG>Nota:</STRONG> </P>
 <UL>
 <LI><EM>Necesitará descomprimir el archivo y quemar la imagen ISO en un CD-ROM. Para obtener las instrucciones sobre como realizar esto consulte el manual provisto con el software de escritura de CD de&nbsp;su lectora de CD-ROM.</EM> 
 <LI><EM>Las imagenes ISO no se graban sobre los CD-ROM de la misma forma que los archivos de datos comunes.</EM></LI></UL>
@@ -80,7 +80,15 @@
         </div>
         
         <div id="pagefooter">
-            <p>&nbsp;</p><p>&nbsp;</p><hr style="height: 1px" /><p><p class="MsoNormal"><b>Reproducción</b></p> <br><p class="MsoNormal">El contenido de esta publicación puede ser reproducido total o parcialmente y en cualquier forma para propósitos educacionales o sin ánimo de lucro sin permiso especial del propietario de los derechos de autor, siempre y cuando la fuente sea proporcionada. El PNUMA agradecería recibir una copia de cualquier publicación que utilice esta publicación como fuente. Esta publicación no puede ser usada en absoluto para venta o cualquier otro propósito comercial, sin permiso previo y por escrito del PNUMA. El uso de la información de éste sito concerniente a confidencialidad de productos para publicidad o propaganda no es permitido.</p> <br><br><p class="MsoNormal"><b>Descargo de Responsabilidades</b></p> <br><p class="MsoNormal">El contenido y puntos de vista expresados en éste sitio web no necesariamente reflejan los puntos de vista y políticas de las organizaciones que contribuyen con el Programa de Naciones Unidas para el Medio Ambiente (PNUMA) y tampoco implica consentimiento alguno. Las designaciones empleadas y la presentación del material en este sitio web no implica en absoluto expresión alguna por parte del PNUMA concerniente a la situación legal de ningún país, territorio o cuidad o sus autoridades, o concerniente a la delimitación de sus fronteras y límites. La mención de una compañía comercial o producto en esta publicación no implica respaldo del PNUMA.</p></p>
+            <p>&nbsp;</p><p>&nbsp;</p><hr style="height: 1px" /><p><p class="MsoNormal"><b>Reproducción</b></p> <br>
+
+<p class="MsoNormal">El contenido de esta publicación puede ser reproducido total o parcialmente y en cualquier forma para propósitos educacionales o sin ánimo de lucro sin permiso especial del propietario de los derechos de autor, siempre y cuando la fuente sea proporcionada. El PNUMA agradecería recibir una copia de cualquier publicación que utilice esta publicación como fuente. Esta publicación no puede ser usada en absoluto para venta o cualquier otro propósito comercial, sin permiso previo y por escrito del PNUMA. El uso de la información de éste sito concerniente a confidencialidad de productos para publicidad o propaganda no es permitido.
+</p> <br>
+<br>
+
+<p class="MsoNormal"><b>Descargo de Responsabilidades</b></p> <br>
+
+<p class="MsoNormal">El contenido y puntos de vista expresados en éste sitio web no necesariamente reflejan los puntos de vista y políticas de las organizaciones que contribuyen con el Programa de Naciones Unidas para el Medio Ambiente (PNUMA) y tampoco implica consentimiento alguno. Las designaciones empleadas y la presentación del material en este sitio web no implica en absoluto expresión alguna por parte del PNUMA concerniente a la situación legal de ningún país, territorio o cuidad o sus autoridades, o concerniente a la delimitación de sus fronteras y límites. La mención de una compañía comercial o producto en esta publicación no implica respaldo del PNUMA.</p></p>
         </div>
         
     </div>
