--- a/CurrentRelease/fr/Training_Materials.html
+++ b/CurrentRelease/fr/Training_Materials.html
@@ -71,7 +71,7 @@
     <div id="pagebody">
         <div id="mainbody">
 <P>Les modules&nbsp;du CEPRB&nbsp;comprennent un ensemble cohérent de sous-unités de formation. Les sous-unités de formation sont auto-suffisants, ce qui signifie que les différents composants peuvent se réunir dans des différents formats adaptés à des publics différents.</P>
-<P>Cliquez <A href="http://www.unep.ch/biosafety/BCH/BCHHelpSystem/CD%20ISOs%20Training%20Materials/fr.zip" target=_blank>ici</A> pour télécharger&nbsp;l'image de&nbsp;CD-ROM avec&nbsp;le kit de formation du CEPRB.</P>
+<P>Cliquez <A href="http://bch.cbd.int/help/topics/fr.zip" target=_blank>ici</A> pour télécharger&nbsp;l'image de&nbsp;CD-ROM avec&nbsp;le kit de formation du CEPRB.</P>
 <P><STRONG>Note:</STRONG></P>
 <UL>
 <LI><EM>Vous aurez besoin de décompresser le fichier et d'écrire l'image ISO sur un CD-ROM. Pour obtenir des instructions sur la façon de le faire, consultez le manuel fourni avec le logiciel d'écriture de&nbsp;votre lecteur de CD-ROM. </EM>
@@ -81,7 +81,11 @@
         </div>
         
         <div id="pagefooter">
-            <p>&nbsp;</p><p>&nbsp;</p><hr style="height: 1px" /><p><p class="MsoNormal"><b>Reproduction</b></p><br><p class="MsoNormal">Le contenu de cette publication peut être reproduit en tout ou partie et sous quelque forme que ce soit, à but éducatif ou non lucratif, sans besoin d’un permis spécial du détenteur du droit d’auteur, à condition que la source soit citée. Le PNUE serait reconnaissant de recevoir une copie de toute publication utilisant cette publication comme source. Cette publication ne pourra pas être revendue ou utilisée pour quelque autre but commercial que ce soit sans une autorisation préalable par écrit du PNUE. L’utilisation d’information de ce site web concernant des produits de marque déposée pour la propagande ou la publicité est interdite.</p><br><br><p class="MsoNormal"><b>Avis de non-responsabilité</b></p><br><p class="MsoNormal">Le contenu et les opinions exprimés sur ce site web ne reflètent pas nécessairement les opinions ou les politiques des organisations contributoires ou du Programme des Nations Unies pour l’Environnement (PNUE), et ils n’impliquent pas non plus aucune approbation. Les désignations employées et la présentation du matériel sur ce site web n’impliquent pas l’expression de quelque opinion que ce soit de la part du PNUE concernant le statut légal d’un pays, d’un territoire ou d’une ville ou ses autorités, ou concernant la délimitation de ses frontières et ses limites. La mention d’une compagnie ou d'un produit commercial dans cette publication n'implique pas l’appui du PNUE.</p></p>
+            <p>&nbsp;</p><p>&nbsp;</p><hr style="height: 1px" /><p><p class="MsoNormal"><b>Reproduction</b></p><br>
+<p class="MsoNormal">Le contenu de cette publication peut être reproduit en tout ou partie et sous quelque forme que ce soit, à but éducatif ou non lucratif, sans besoin d’un permis spécial du détenteur du droit d’auteur, à condition que la source soit citée. Le PNUE serait reconnaissant de recevoir une copie de toute publication utilisant cette publication comme source. Cette publication ne pourra pas être revendue ou utilisée pour quelque autre but commercial que ce soit sans une autorisation préalable par écrit du PNUE. L’utilisation d’information de ce site web concernant des produits de marque déposée pour la propagande ou la publicité est interdite.</p><br>
+<br>
+<p class="MsoNormal"><b>Avis de non-responsabilité</b></p><br>
+<p class="MsoNormal">Le contenu et les opinions exprimés sur ce site web ne reflètent pas nécessairement les opinions ou les politiques des organisations contributoires ou du Programme des Nations Unies pour l’Environnement (PNUE), et ils n’impliquent pas non plus aucune approbation. Les désignations employées et la présentation du matériel sur ce site web n’impliquent pas l’expression de quelque opinion que ce soit de la part du PNUE concernant le statut légal d’un pays, d’un territoire ou d’une ville ou ses autorités, ou concernant la délimitation de ses frontières et ses limites. La mention d’une compagnie ou d'un produit commercial dans cette publication n'implique pas l’appui du PNUE.</p></p>
         </div>
         
     </div>
