--- a/CurrentRelease/ru/Training_Materials.html
+++ b/CurrentRelease/ru/Training_Materials.html
@@ -72,7 +72,7 @@
         <div id="mainbody">
 <P>Модули МПБ включают в себя ряд целостных обучающих единиц. Обучающие единицы сами по себе являются автономными, т.е. различные компоненты могут быть объединены в различных форматах, пригодных для различных целевых аудиторий.</P>
 <P>&nbsp;</P>
-<P><SPAN style="COLOR: windowtext"><A href="http://www.unep.ch/biosafety/BCH/BCHHelpSystem/CD%20ISOs%20Training%20Materials/ru.zip" target=_blank>Нажмите здесь для загрузки образа компакт-диска, содержащего учебный пакет МПБ.</A></SPAN></P>
+<P><SPAN style="COLOR: windowtext"><A href="http://bch.cbd.int/help/topics/ru.zip" target=_blank>Нажмите здесь для загрузки образа компакт-диска, содержащего учебный пакет МПБ.</A></SPAN></P>
 <P><SPAN style="COLOR: windowtext"></SPAN>&nbsp;</P>
 <P><SPAN style="COLOR: windowtext"><STRONG>Примечание:</STRONG></SPAN></P>
 <UL>
@@ -83,7 +83,32 @@
         </div>
         
         <div id="pagefooter">
-            <p>&nbsp;</p><p>&nbsp;</p><hr style="height: 1px" /><p><p class="MsoNormal"><span lang="RU"><b>Воспроизведение</b></span></p> <br><br><p class="MsoNormal"><span lang="RU">Содержание настоящей публикации можетвоспроизводиться полностью или по частям, в любой форме в образовательных целяхи без извлечения прибыли, без специального разрешения владельца авторских правпри условии сообщения источника. ЮНЕП выражает признательность запредоставление копии любой публикации, которая использует настоящее издание вкачестве источника. Данное издание не подлежит перепродаже или, какому бы нибыло использованию в иных целях без предварительного разрешения ЮНЕП вписьменной форме. Использование информации с данного вебсайта в целяхпатентования продукции для публикации или рекламы запрещено.</span></p> <br><br><p class="MsoNormal"><span lang="RU"><b>Отказ отответственности</b></span></p> <br><br><p class="MsoNormal"><span lang="RU">Содержание и</span><span style="" lang="RU">взгляды, выраженные наданном вебсайте, не обязательно отражают мнение или политику поддерживающихорганизаций или Программы ООН по окружающей среде (ЮНЕП), и не подразумеваюткакого-либо одобрения. Используемые обозначения и презентация материала наданном вебсайте не подразумевают выражение какого-либо мнения со стороны ЮНЕП вотношении юридического статуса какой-либо страны, территории или города, илисоответствующих властей, или в отношении определения ее границ и пограничныхтерриторий. Упоминание коммерческих компаний или продукции в данной публикациине подразумевает одобрение со стороны ЮНЕП.</span></p></p>
+            <p>&nbsp;</p><p>&nbsp;</p><hr style="height: 1px" /><p><p class="MsoNormal"><span lang="RU"><b>Воспроизведение</b></span></p> <br>
+<br>
+<p class="MsoNormal"><span lang="RU">Содержание настоящей публикации может
+воспроизводиться полностью или по частям, в любой форме в образовательных целях
+и без извлечения прибыли, без специального разрешения владельца авторских прав
+при условии сообщения источника. ЮНЕП выражает признательность за
+предоставление копии любой публикации, которая использует настоящее издание в
+качестве источника. Данное издание не подлежит перепродаже или, какому бы ни
+было использованию в иных целях без предварительного разрешения ЮНЕП в
+письменной форме. Использование информации с данного вебсайта в целях
+патентования продукции для публикации или рекламы запрещено.
+</span></p> <br>
+<br>
+<p class="MsoNormal"><span lang="RU"><b>Отказ от
+ответственности</b></span></p> <br>
+<br>
+<p class="MsoNormal"><span lang="RU">Содержание и
+</span><span style="" lang="RU">взгляды, выраженные на
+данном вебсайте, не обязательно отражают мнение или политику поддерживающих
+организаций или Программы ООН по окружающей среде (ЮНЕП), и не подразумевают
+какого-либо одобрения. Используемые обозначения и презентация материала на
+данном вебсайте не подразумевают выражение какого-либо мнения со стороны ЮНЕП в
+отношении юридического статуса какой-либо страны, территории или города, или
+соответствующих властей, или в отношении определения ее границ и пограничных
+территорий. Упоминание коммерческих компаний или продукции в данной публикации
+не подразумевает одобрение со стороны ЮНЕП.</span></p></p>
         </div>
         
     </div>
