git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@1795 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/en/Case_Studies.html
+++ b/CurrentRelease/en/Case_Studies.html
@@ -71,7 +71,7 @@
     <div id="pagebody">
         <div id="mainbody">
 <P><STRONG>There are several interactive case studies designed to assist users in applying the concepts covered in the various training modules.</STRONG><BR></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS01En.pdf" target=_blank>Case 1 Mexican trader exporting cotton seed</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/05)%20Case%20Studies/CS01En.pdf" target=_blank>Case 1 Mexican trader importing cotton seed</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS02En.pdf" target=_blank>Case 2 Regulator researches LMO-FFPs</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS03En.pdf" target=_blank>Case 3 Registering data on CP Users Management</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS04En.pdf" target=_blank>Case 4 Registering data on CP contacts and CNA</A></P>
@@ -82,7 +82,7 @@
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS09En.pdf" target=_blank>Case 9 Scientist seeks information on importing LMOs</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS10En.pdf" target=_blank>Case 10 Information CNA must provide to BCH about a decision</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS11En.pdf" target=_blank>Case 11 Medical researcher seeks info on AIA</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS12En.pdf" target=_blank>Case 12 Company rep seeks information on how submit record to BCH</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/05)%20Case%20Studies/CS12En.pdf" target=_blank>Case 12 A company representative seeks information on procedures for exporting LMOs.</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS13En.pdf" target=_blank>Case 13 National Development Agency seeks information on supporting Capacity building programs.</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS14En.pdf" target=_blank>Case 14 Person seeks information on how to submit record to BCH</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS15En.pdf" target=_blank>Case 15 Person looks for info about a GM food product</A></P>
@@ -95,7 +95,7 @@
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS22En.pdf" target=_blank>Case 22 Ghana risk assessment IR papaya</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS23En.pdf" target=_blank>Case 23 NFP registers biosafety expert</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS24En.pdf" target=_blank>Case 24 Inspector discovers illegal LMO</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS25En.pdf" target=_blank>Case 25 NFP registers decision and RA on GM cotton</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/05)%20Case%20Studies/CS25En.pdf" target=_blank>Case 25 A Competent National Authority registers a risk assessment and decision to import herbicide tolerant cotton</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS26En.pdf" target=_blank>Case 26 NFP registers laws</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/05) Case Studies/CS27En.pdf" target=_blank>Case 27 Central Portal Information Route</A></P>
             <a name="seealsobookmark"></a>
