--- a/CurrentRelease/en/Quiz_Questions_with_Answer_keys.html
+++ b/CurrentRelease/en/Quiz_Questions_with_Answer_keys.html
@@ -73,7 +73,7 @@
 <P><STRONG>There are several quiz questions available that provide quick interaction with participants and an easy way to gauge understanding of different uses of the BCH and may be used throughout the training.</STRONG></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/08) Quiz Question with Answer Keys/QZ01En.pdf" target=_blank>Quick Quiz Cards</A></P>
 <P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/08) Quiz Question with Answer Keys/QZ02En.pdf" target=_blank>Quick Quiz with Answers</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/08) Quiz Question with Answer Keys/QZ03En.pdf" target=_blank>Scanvenger Hunt</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/08)%20Quiz%20Question%20with%20Answer%20Keys/QZ03En.pdf" target=_blank>Scavenger Hunt</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
