git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@1796 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/fr/webtoc.html
+++ b/CurrentRelease/fr/webtoc.html
@@ -654,7 +654,7 @@
 <li class="tbc" icon="-1" isnew="False"><a href="Quiz_Questions_with_Answer_keys.html"><img class="icon"/><span class="nodetext">Questions Tests avec Correction</span></a>
 <li class="tbc" icon="-1" isnew="False"><a href="Operational_Handbook.html"><img class="icon"/><span class="nodetext">Manuel D'Opérations</span></a>
 <li class="tbc" icon="-1" isnew="False"><a href="Promotional_Materials.html"><img class="icon"/><span class="nodetext">Matériel Promotionnel</span></a>
-<li class="tbc" icon="-1" isnew="False"><a href="Exercises.html"><img class="icon"/><span class="nodetext">Exercises</span></a>
+<li class="tbc" icon="-1" isnew="False"><a href="Exercises.html"><img class="icon"/><span class="nodetext">Exercices</span></a>
 <li class="tbc" icon="-1" isnew="False"><a href="HERMES_BCH_Development_Tool.html"><img class="icon"/><span class="nodetext">Outil de développement du CEPRB HERMES</span></a>
 <li class="tbc" icon="-1" isnew="False"><a href="AJAX_BCH_Development_Tool.html"><img class="icon"/><span class="nodetext">Outil de développement du CEPRB AJAX</span></a>
 </ul>
