Added small fix.
git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@4723 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/en/Categories of documents national and reference records.html
+++ b/CurrentRelease/en/Categories of documents national and reference records.html
@@ -59,7 +59,7 @@ TOCHighlightLoad();
             </tbody>
         </table>
          <table width="100%" id="pagetopbreadcrumbs" cellspacing="0" cellpadding="0"><tr><td>
-<a href="BCH_Central_Portal_Online_Help.html">BCH Central Portal Online Help</a> > BCH Central Portal > <a href="Registering_Information_in_the_BCH_Central_Portal.html">Registering Information in the BCH Central Portal</a> > <a href="The Management Centre main page.html">The Management Centre main page</a> > <a href="Register a new record.html">Register a new record</a> > Categories of documents: national and reference records</td></tr></table> 
+<a href="BCH_Central_Portal_Online_Help.html">BCH Central Portal Online Help</a> > BCH Central Portal > <a href="Registering_Information2.html">Registering Information in the BCH Central Portal</a> > <a href="The Management Centre main page.html">The Management Centre main page</a> > <a href="Register a new record.html">Register a new record</a> > Categories of documents: national and reference records</td></tr></table> 
         
     </div>
 
@@ -73,7 +73,7 @@ TOCHighlightLoad();
 <DIV class=Section1>
 <P class=MsoNormal style="MARGIN: 6pt 0.2pt 6pt 0cm"><SPAN lang=EN-GB>The <B>national records</B> that can be submitted are the following:</SPAN></P>
 <P class=MsoNormal style="MARGIN: 6pt 0.2pt 6pt 0cm">&nbsp;</P>
-<P style="PAGE-BREAK-BEFORE: always">
+<P style="PAGE-BREAK-BEFORE: always"></P>
 <TABLE class=MsoNormalTable style="BORDER-RIGHT: #000000 1px solid; BORDER-TOP: #000000 1px solid; BORDER-LEFT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid; BORDER-COLLAPSE: collapse" cellSpacing=0 cellPadding=0 borderColorLight=#000000 border=1>
 <TBODY>
 <TR>
@@ -125,7 +125,7 @@ TOCHighlightLoad();
 <P class=MsoNormal style="MARGIN: 6pt 0.2pt 6pt 0cm"><SPAN lang=EN-GB>The submission of national records is limited to BCH National Focal Points (BCH-NFP) and National Authorized Users (NAUs) pending BCH-NFP validation. The list of Common Formats for national records is therefore made available only to these users.</SPAN></P>
 <P class=MsoNormal style="MARGIN: 6pt 0.2pt 6pt 0cm"><SPAN lang=EN-GB>The <B>reference records</B> that can be submitted are the following:</SPAN></P>
 <P class=MsoNormal style="MARGIN: 6pt 0.2pt 6pt 0cm">&nbsp;</P>
-<P style="PAGE-BREAK-BEFORE: always">
+<P style="PAGE-BREAK-BEFORE: always"></P>
 <TABLE class=MsoNormalTable style="BORDER-RIGHT: #000000 1px solid; BORDER-TOP: #000000 1px solid; BORDER-LEFT: #000000 1px solid; BORDER-BOTTOM: #000000 1px solid; BORDER-COLLAPSE: collapse" cellSpacing=0 cellPadding=0 borderColorLight=#000000 border=1>
 <TBODY>
 <TR style="page-break-inside: avoid">
@@ -183,6 +183,7 @@ TOCHighlightLoad();
 <P class=MsoNormal style="MARGIN: 6pt 0.2pt 6pt 0cm"><B><SPAN lang=EN-GB>Note</SPAN></B><SPAN lang=EN-GB>: both national and reference records can contain, besides their own information, links to other Common Formats. For example, an LMO record can refer to other records such as an inserted gene, the parental organism, the contact details of an applicant, etc.</SPAN></P>
 <P class=MsoNormal style="MARGIN: 6pt 0.2pt 6pt 0cm"><SPAN lang=EN-GB>Referencing other records greatly reduces the need to manually enter duplicate information. For example, you can enter the contact details of a Competent National Authority (CNA) only once and then simply refer to that record when registering all of the decisions that CNA has taken (i.e. rather than entering the contact details every time a decision is registered).</SPAN></P>
 <P class=MsoNormal>&nbsp;</P>
+<P style="PAGE-BREAK-BEFORE: always"></P>
 <DIV style="BORDER-RIGHT: windowtext 1pt solid; PADDING-RIGHT: 4pt; BORDER-TOP: windowtext 1pt solid; PADDING-LEFT: 4pt; PADDING-BOTTOM: 1pt; BORDER-LEFT: windowtext 1pt solid; PADDING-TOP: 1pt; BORDER-BOTTOM: windowtext 1pt solid">
 <P class=MsoNormal style="BORDER-RIGHT: medium none; PADDING-RIGHT: 0cm; BORDER-TOP: medium none; PADDING-LEFT: 0cm; PADDING-BOTTOM: 0cm; BORDER-LEFT: medium none; PADDING-TOP: 0cm; BORDER-BOTTOM: medium none"><B><SPAN lang=EN-GB>Validation</SPAN></B></P>
 <P class=MsoNormal style="BORDER-RIGHT: medium none; PADDING-RIGHT: 0cm; BORDER-TOP: medium none; PADDING-LEFT: 0cm; PADDING-BOTTOM: 0cm; BORDER-LEFT: medium none; PADDING-TOP: 0cm; BORDER-BOTTOM: medium none"><SPAN lang=EN-GB>In order to ensure the completeness and accuracy of information made available through the BCH, most records will require <B>“validation”</B>, i.e. approval for publishing. National records registered by BCH-NFPs are automatically validated and immediately made available through the BCH.</SPAN></P>
@@ -193,7 +194,7 @@ TOCHighlightLoad();
 <UL style="MARGIN-TOP: 0cm" type=disc>
 <LI class=MsoNormal style="MARGIN-TOP: 6pt; MARGIN-BOTTOM: 6pt; LINE-HEIGHT: normal; TEXT-ALIGN: justify"><SPAN lang=EN-GB>The designation of a <I>National Focal Point for the Cartagena Protocol on Biosafety</I> (CPB-NFP) must be endorsed by the National Focal Point for the Convention on Biological Diversity (CBD-NFP) or by a direct expression of the Government (i.e. a Minister of State).</SPAN> 
 <LI class=MsoNormal style="MARGIN-TOP: 6pt; MARGIN-BOTTOM: 6pt; LINE-HEIGHT: normal; TEXT-ALIGN: justify"><SPAN lang=EN-GB>The designation of a <I>National Focal Point for the Biosafety Clearing-House</I> (BCH-NFP) must be endorsed by the National Focal Point for the Cartagena Protocol on Biosafety (CPB-NFP).</SPAN> 
-<LI class=MsoNormal style="MARGIN-TOP: 6pt; MARGIN-BOTTOM: 6pt; LINE-HEIGHT: normal; TEXT-ALIGN: justify"><SPAN lang=EN-GB>The designation of a <I>Contact point for unintentional transboundary movements and emergency measures</I> (Art. 17) must be endorsed by the Biosafety Clearing-House National Focal Point (BCH-NFP).</SPAN></LI></UL></DIV></DIV>
+<LI class=MsoNormal style="MARGIN-TOP: 6pt; MARGIN-BOTTOM: 6pt; LINE-HEIGHT: normal; TEXT-ALIGN: justify"><SPAN lang=EN-GB>The designation of a <I>Contact point for unintentional transboundary movements and emergency measures</I> (Art. 17) must be endorsed by the Biosafety Clearing-House National Focal Point (BCH-NFP).</SPAN> </LI></UL></DIV></DIV>
 <DIV class=Section1> </DIV>
 <DIV class=Section1> </DIV>
 <DIV class=Section1> </DIV> <a name="seealsobookmark"></a>
