--- a/CurrentRelease/en/webindex.html
+++ b/CurrentRelease/en/webindex.html
@@ -202,6 +202,7 @@
 <a target="webcontent" href="Register a new record.html">Register a new record</a><br />
 <a target="webcontent" href="Registering_Information.html">Registering Information</a><br />
 <a target="webcontent" href="Registering_Information_in_the_BCH_Central_Portal.html">Registering Information in the BCH Central Portal</a><br />
+<a target="webcontent" href="Registering_Information2.html">Registering Information in the BCH Central Portal</a><br />
 <a target="webcontent" href="Registry_searches.html">Registry searches</a><br />
 <a target="webcontent" href="Reporting.html">Reporting</a><br />
 <a target="webcontent" href="Reproduction_Disclaimers.html">Reproduction and Disclaimers</a><br />
