--- a/CurrentRelease/en/Registering_Information_in_the_BCH_Central_Portal.html
+++ b/CurrentRelease/en/Registering_Information_in_the_BCH_Central_Portal.html
@@ -59,7 +59,7 @@ TOCHighlightLoad();
             </tbody>
         </table>
          <table width="100%" id="pagetopbreadcrumbs" cellspacing="0" cellpadding="0"><tr><td>
-<a href="BCH_Central_Portal_Online_Help.html">BCH Central Portal Online Help</a> > BCH Central Portal > Registering Information in the BCH Central Portal</td></tr></table> 
+<a href="BCH_Central_Portal_Online_Help.html">BCH Central Portal Online Help</a> > Registering Information in the BCH Central Portal</td></tr></table> 
         
     </div>
 
@@ -97,6 +97,6 @@ TOCHighlightLoad();
         <div id="pagefooter">
             <p>&nbsp;</p><p>&nbsp;</p><hr style="height: 1px" /><p><p class="MsoNormal"><a href="Reproduction_Disclaimers.html">Reproduction andDisclaimers</a></p></p>
         </div>
-    </div><div id=nonscrollingpagefooter><b>Copyright 2008 UNEP-GEF</b></div>
+    </div><div id=nonscrollingpagefooter><b>© UNEP SCBD 2010 all rights reserved</b></div>
 </body>
 </html>
