Fixed issue with toolbar.
git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@4724 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/en/The BCH Management Centre.html
+++ b/CurrentRelease/en/The BCH Management Centre.html
@@ -77,7 +77,7 @@ TOCHighlightLoad();
 <P class=MsoNormal style="MARGIN: 6pt 0.2pt 6pt 0cm">&nbsp;</P>
 <P class=MsoNormal style="MARGIN: 6pt 0.2pt 6pt 0cm"><STRONG>Registering a BCH account</STRONG></P>
 <P class=MsoNormal style="MARGIN: 6pt 0.2pt 6pt 0cm">&nbsp;</P>
-<P class=MsoNormal style="MARGIN: 6pt 0.2pt 6pt 0cm">Any user can search the BCH databases at <A href="http://bch.cbd.int/"></A>without a registered BCH account.</P>http://bch.cbd.int/ 
+<P class=MsoNormal style="MARGIN: 6pt 0.2pt 6pt 0cm">Any user can search the BCH databases at <A href="http://bch.cbd.int/"></A><A href="http://bch.cbd.int/">http://bch.cbd.int/</A>&nbsp;without a registered BCH account.</P>
 <P class=MsoNormal style="MARGIN: 6pt 0.2pt 6pt 0cm">Registering a BCH account is only necessary if the user:</P>
 <P class=MsoNormal style="MARGIN: 6pt 0.2pt 6pt 0cm">&nbsp;</P>
 <UL>
