--- a/CurrentRelease/en/webtoolbar.html
+++ b/CurrentRelease/en/webtoolbar.html
@@ -116,7 +116,7 @@
 
                 <td id="helponhelp" align="middle">
                     <div>
-                        <a href="Help on Help.html" target="webcontent"><img style=
+                        <a href="Help_on_Help.html" target="webcontent"><img style=
                         "BORDER-TOP-STYLE: none; BORDER-RIGHT-STYLE: none; BORDER-LEFT-STYLE: none; BORDER-BOTTOM-STYLE: none" src=
                         "images/HelpOnHelp_icon.png"><br>
                         How to use this Help</a>
