changed materiaux by materiel -
git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@8802 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/fr/webindex.html
+++ b/CurrentRelease/fr/webindex.html
@@ -163,7 +163,7 @@
 <a target="webcontent" href="Mailing_List.html">Liste de diffusion</a><br />
 <a target="webcontent" href="Roster_of_Experts.html">Liste des Experts</a><br />
 <a target="webcontent" href="Laws_and_Regulations.html">Lois et Réglementations</a><br />
-<a target="webcontent" href="Training_Materials.html">Matériaux de Formation</a><br />
+<a target="webcontent" href="Training_Materials.html">Matériels de Formation</a><br />
 <a target="webcontent" href="Modalities_of_operation.html">Modalités de fonctionnement</a><br />
 <a target="webcontent" href="Training_Modules2.html">Modules de formation</a><br />
 <a target="webcontent" href="Transboundary movements of LMOs between Parties and non-Parties .html">Mouvements transfrontières des OVM entre Parties et non-Parties (Article 24)</a><br />
