--- a/CurrentRelease/fr/webtoc.html
+++ b/CurrentRelease/fr/webtoc.html
@@ -642,7 +642,7 @@
 </ul>
 <li class="tbc" icon="-1" isnew="False"><a href="Information-sharing for non-Parties.html"><img class="icon"/><span class="nodetext">Échange d’information pour non-Parties</span></a>
 </ul>
-<li class="tbc" icon="-1" isnew="False"><a href="Training_Materials.html"><img class="icon"/><span class="nodetext">Matériaux de Formation</span></a>
+<li class="tbc" icon="-1" isnew="False"><a href="Training_Materials.html"><img class="icon"/><span class="nodetext">Matériels de Formation</span></a>
 <ul class='tbc'>
 <li class="tbc" icon="-1" isnew="False"><a href="Using BCH training modules to meet stakeholder needs.html"><img class="icon"/><span class="nodetext">Utilisation des modules de formation du CEPRB pour satisfaire les besoins des intervenants</span></a>
 <li class="tbc" icon="-1" isnew="False"><a href="Stakeholder curricula.html"><img class="icon"/><span class="nodetext">Programmes d'études pour les différents intervenants</span></a>
